--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@ethersproject/providers": "^5.6.5",
         "@headlessui/react": "^0.0.0-insiders.591b328",
         "@heroicons/react": "^1.0.6",
         "@supabase/supabase-js": "^1.35.2",
         "@tailwindcss/forms": "^0.5.0",
+        "@web3-react/core": "^6.1.9",
+        "@web3-react/injected-connector": "^6.0.7",
+        "@web3-react/walletconnect-connector": "^6.2.13",
         "next": "12.1.5",
         "react": "17.0.2",
         "react-dom": "17.0.2",
