--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-toastify": "^8.2.0",
+        "react-vertical-timeline-component": "^3.5.2",
         "tailwind-scrollbar": "^1.3.1"
     },
     "devDependencies": {
